[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://ui/SettingsScreen.gd" id="1_set"]
[ext_resource type="PackedScene" path="res://ui/components/MenuButton.tscn" id="2_btn"]

[node name="SettingsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_set")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.180392, 0.2, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 40.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "SETTINGS"
horizontal_alignment = 1

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="ThemeButton" parent="Content" instance=ExtResource("2_btn")]
layout_mode = 2
text = "THEME: CLASSIC"
bg_color = Color(0.196078, 0.196078, 0.705882, 1)

[node name="Keys" type="VBoxContainer" parent="Content"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RowUp" type="HBoxContainer" parent="Content/Keys"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Content/Keys/RowUp"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "UP"
horizontal_alignment = 2

[node name="Button" parent="Content/Keys/RowUp" instance=ExtResource("2_btn")]
layout_mode = 2
text = "W"
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="RowDown" type="HBoxContainer" parent="Content/Keys"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Content/Keys/RowDown"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "DOWN"
horizontal_alignment = 2

[node name="Button" parent="Content/Keys/RowDown" instance=ExtResource("2_btn")]
layout_mode = 2
text = "S"
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="RowLeft" type="HBoxContainer" parent="Content/Keys"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Content/Keys/RowLeft"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "LEFT"
horizontal_alignment = 2

[node name="Button" parent="Content/Keys/RowLeft" instance=ExtResource("2_btn")]
layout_mode = 2
text = "A"
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="RowRight" type="HBoxContainer" parent="Content/Keys"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="Content/Keys/RowRight"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "RIGHT"
horizontal_alignment = 2

[node name="Button" parent="Content/Keys/RowRight" instance=ExtResource("2_btn")]
layout_mode = 2
text = "D"
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Audio" type="VBoxContainer" parent="Content"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SFXRow" type="HBoxContainer" parent="Content/Audio"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Content/Audio/SFXRow"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "SFX"
horizontal_alignment = 2

[node name="Slider" type="HSlider" parent="Content/Audio/SFXRow"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Mute" type="CheckBox" parent="Content/Audio/SFXRow"]
layout_mode = 2
text = "Mute"
horizontal_alignment = 2



[node name="BackButton" parent="." instance=ExtResource("2_btn")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
text = "BACK"
bg_color = Color(0.705882, 0.196078, 0.196078, 1)
